--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "packageManager": "npm@11.5.2",
   "overrides": {
     "react": "$react",
-    "react-dom": "$react-dom"
+    "react-dom": "$react-dom",
+    "next": "$next"
   },
   "dependencies": {
     "@next/font": "^14.2.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^4.4.1",
+    "@sentry/nextjs": "^10.5.0",
     "@tailwindcss/typography": "^0.5.16",
     "@uiw/react-md-editor": "^4.0.8",
     "autoprefixer": "^10.4.21",
@@ -39,6 +41,7 @@
     "sanity": "^4.4.1",
     "sanity-plugin-markdown": "^6.0.0",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
